fixed button overlap on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,9 @@ body{
   top: 10px;
   left: 10px;
   color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
 }
 .hamburgerIcon{
   font-size: 30px;
@@ -248,6 +251,12 @@ body{
 }
 
 /* *****Modals Styles***** */
+.miniButton{
+  margin-top: 8px !important;
+  height: 28px !important;
+  line-height: 28px !important;
+
+}
 .btnHide{
   display: none !important;
 }
@@ -384,5 +393,9 @@ body{
   .miniButton{
     margin-right: 5px !important;
     font-size: 12px;
+    margin-top: 50px !important;
   }
+  #list{
+    right: 0 !important;
+}
 }
